--- a/.github/workflows/conan-ci.yml
+++ b/.github/workflows/conan-ci.yml
@@ -23,7 +23,10 @@ jobs:
     container:
       image: conanio/gcc7
     steps:
+      - name: checkout
+        uses: actions/checkout@v2
       - name: prepare build
+        shell: bash
         run: |
           USER_CHANNEL=$CI_PROJECT_PATH//\//+/$CHANNEL
           . ./bin/env.sh
@@ -39,12 +42,15 @@ jobs:
     container:
       image: aflplusplus/aflplusplus
     steps:
+      - name: checkout
+        uses: actions/checkout@v2
       - name: prepare fuzzing
         run: |
           apt update -y
           apt install -y python3 python3-pip cmake gcc g++
           pip install conan
       - name: fuzzing
+        shell: bash
         run: |
           bash ./bin/build.sh
           exit 1
