--- a/.github/workflows/conan-ci.yml
+++ b/.github/workflows/conan-ci.yml
@@ -26,7 +26,7 @@ jobs:
       - name: prepare checkout
         shell: bash
         run: |
-          apt install -y git
+          sudo apt-get install -y git
       - name: checkout
         uses: actions/checkout@v2
       - name: prepare build
@@ -49,7 +49,7 @@ jobs:
       - name: prepare checkout
         shell: bash
         run: |
-          apt install -y git
+          sudo apt-get install -y git
       - name: checkout
         uses: actions/checkout@v2
       - name: prepare fuzzing
