--- a/.github/workflows/conan-ci.yml
+++ b/.github/workflows/conan-ci.yml
@@ -33,7 +33,13 @@ jobs:
       - uses: abatilo/actions-poetry@v2.0.0
         with:
           poetry-version: ${{ matrix.poetry-version }}
+      - uses: actions/cache@v2
+        id: poetry_cache_id
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
       - name: install conan
+        if: steps.poetry_cache_id.outputs.cache-hit != 'true'
         shell: bash
         run: |
           poetry install
@@ -68,7 +74,13 @@ jobs:
       - uses: abatilo/actions-poetry@v2.0.0
         with:
           poetry-version: ${{ matrix.poetry-version }}
+      - uses: actions/cache@v2
+        id: poetry_cache_id
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
       - name: install conan
+        if: steps.poetry_cache_id.outputs.cache-hit != 'true'
         shell: bash
         run: |
           poetry install
