--- a/.github/workflows/conan-ci.yml
+++ b/.github/workflows/conan-ci.yml
@@ -5,7 +5,6 @@ on:
 
 env:
   CHANNEL: stable
-  CONAN_USER_HOME: ${GITHUB_WORKSPACE}/.conan/
 
 jobs:
   build:
@@ -40,6 +39,8 @@ jobs:
           . ./bin/env.sh
           REFERENCE=$PACKAGE_NAME/$PACKAGE_VERSION@$USER_CHANNEL
       - name: build
+        env:
+          CONAN_USER_HOME: ${GITHUB_WORKSPACE}/.conan/
         run: |
           mkdir -p build
           pushd build
