--- a/.github/workflows/conan-ci.yml
+++ b/.github/workflows/conan-ci.yml
@@ -19,9 +19,12 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - uses: abatilo/actions-poetry@v2.0.0
+      - uses: snok/install-poetry@v1
         with:
-          poetry-version: ${{ matrix.poetry-version }}
+          version: ${{ matrix.poetry-version }}
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+          installer-parallel: true
       - uses: actions/cache@v2
         id: poetry_cache_id
         with:
@@ -31,7 +34,7 @@ jobs:
         if: steps.poetry_cache_id.outputs.cache-hit != 'true'
         shell: bash
         run: |
-          poetry install
+          poetry install --no-interaction --no-root
       - name: prepare build
         shell: bash
         run: |
@@ -40,12 +43,9 @@ jobs:
           REFERENCE=$PACKAGE_NAME/$PACKAGE_VERSION@$USER_CHANNEL
       - name: build
         run: |
+          . .venv/bin/activate
           export CONAN_USER_HOME=${GITHUB_WORKSPACE}/.conan/
-          mkdir -p build
-          pushd build
-            poetry run conan install .. --build=missing --generator cmake_multi --settings build_type=Debug
-            poetry run conan build ..
-          popd
+          ./bin/build.sh
 
   fuzz:
     runs-on: ubuntu-latest
@@ -63,9 +63,12 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - uses: abatilo/actions-poetry@v2.0.0
+      - uses: snok/install-poetry@v1
         with:
-          poetry-version: ${{ matrix.poetry-version }}
+          version: ${{ matrix.poetry-version }}
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+          installer-parallel: true
       - uses: actions/cache@v2
         id: poetry_cache_id
         with:
@@ -75,16 +78,13 @@ jobs:
         if: steps.poetry_cache_id.outputs.cache-hit != 'true'
         shell: bash
         run: |
-          poetry install
+          poetry install --no-interaction --no-root
       - name: fuzzing
         shell: bash
         run: |
+          . .venv/bin/activate
           export CONAN_USER_HOME=${GITHUB_WORKSPACE}/.conan/
-          mkdir -p build
-          pushd build
-            poetry run conan install .. --build=missing --generator cmake_multi --settings build_type=Debug
-            poetry run conan build ..
-          popd
+          ./bin/build.sh
           exit 1
 
 #   deploy:
