--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: monster:5003/conanio/gcc7
+image: conanio/gcc7
 variables:
   CHANNEL: stable
   URL: ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/conan
