comment out "conan remove"

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ build:
     - REFERENCE=${PACKAGE_NAME}/${PACKAGE_VERSION}@${USER_CHANNEL}
   script:
     - conan remote add gitlab ${URL} --force
-    - conan remove ${REFERENCE} --remote=gitlab --force
+#    - conan remove ${REFERENCE} --remote=gitlab --force
     - bash ./bin/clean.sh
 
 fuzz:
