--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: conanio/gcc7
 variables:
   CHANNEL: stable
-  URL: ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/conan
+  GITLAB_PACKAGE_URL: ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/conan
   CONAN_USER_HOME: ${CI_PROJECT_DIR}/.conan/
   CONAN_LOGIN_USERNAME: ci_user
   CONAN_PASSWORD: ${CI_JOB_TOKEN}
@@ -28,9 +28,10 @@ build:
     - source ./bin/env.sh
     - REFERENCE=${PACKAGE_NAME}/${PACKAGE_VERSION}@${USER_CHANNEL}
   script:
-    - conan remote add gitlab ${URL} --force
-#    - conan remove ${REFERENCE} --remote=gitlab --force
+    - conan remote add gitlab ${GITLAB_PACKAGE_URL} --force
+    #    - conan remove ${REFERENCE} --remote=gitlab --force
     - bash ./bin/clean.sh
+    - bash ./bin/build.sh -t Release
 
 fuzz:
   image: aflplusplus/aflplusplus
@@ -43,7 +44,7 @@ fuzz:
     - apt install -y python3 python3-pip cmake gcc g++
     - pip install conan
   script:
-    - bash ./bin/build.sh
+    - bash ./bin/build.sh -t Debug
     - exit 1
 
 create_package:
@@ -54,7 +55,7 @@ create_package:
     - USER_CHANNEL=${CI_PROJECT_PATH//\//+}/${CHANNEL}
     - source ./bin/env.sh
     - REFERENCE=${PACKAGE_NAME}/${PACKAGE_VERSION}@${USER_CHANNEL}
-    - echo upload ${REFERENCE} to ${URL}
+    - echo upload ${REFERENCE} to ${GITLAB_PACKAGE_URL}
   script:
-    - bash ./bin/package.sh ${USER_CHANNEL}
+    - bash ./bin/package.sh
     - conan upload ${REFERENCE} --all --remote=gitlab --confirm --force
