--- a/bin/env.ini
+++ b/bin/env.ini
@@ -1,3 +1,4 @@
-USER_CHANNEL=user/testing
 PACKAGE_VERSION=`cat conanfile.py | grep -e "version" |sed 's/ //g' | sed 's/"//g' | sed 's/version=//g'`
 PACKAGE_NAME=`cat conanfile.py | grep -e "name" |sed 's/ //g' | sed 's/"//g' | sed 's/name=//g'`
+USER_CHANNEL=${PACKAGE_NAME}/stable
+PACKAGE_REFERENCE=${PACKAGE_NAME}/${PACKAGE_VERSION}@${USER_CHANNEL}
