Fix "can not set CONAN_USER_HOME"

--- a/bin/env.ini
+++ b/bin/env.ini
@@ -2,3 +2,4 @@ PACKAGE_VERSION=`cat conanfile.py | grep -e "version" |sed 's/ //g' | sed 's/"//
 PACKAGE_NAME=`cat conanfile.py | grep -e "name" |sed 's/ //g' | sed 's/"//g' | sed 's/name=//g'`
 USER_CHANNEL=${PACKAGE_NAME}/stable
 PACKAGE_REFERENCE=${PACKAGE_NAME}/${PACKAGE_VERSION}@${USER_CHANNEL}
+CONAN_USER_HOME=${PWD}
